// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Popover Button as a trigger - Right aligned 1`] = `
.c1 {
  position: relative;
}

.c0 {
  display: inline-block;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      id="trigger"
      onClick={[Function]}
    >
      <button>
        Trigger
      </button>
    </div>
    <div
      className="c1"
    />
  </div>
</div>
`;

exports[`Storyshots Popover Center aligned 1`] = `
.c2 {
  position: relative;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
}

<div
  style={
    Object {
      "textAlign": "right",
      "width": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      id="trigger"
      onClick={[Function]}
    >
      <div
        className="c1"
        disabled={false}
        size={16}
        type="#3498db"
      >
        <span>
          Trigger
        </span>
      </div>
    </div>
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`Storyshots Popover Custom padding 1`] = `
.c1 {
  position: relative;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <button>
      Trigger
    </button>
  </div>
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots Popover Default - Link as a trigger 1`] = `
.c2 {
  position: relative;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots Popover Dismissable 1`] = `
.c2 {
  position: relative;
}

.c1 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #3498db;
}

.c1 i.margin-left {
  margin-left: 8px;
}

.c1 i.margin-right {
  margin-right: 8px;
}

.c1 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > a {
  color: inherit;
}

.c1:hover {
  color: #2980b9;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <div
      className="c1"
      disabled={false}
      size={16}
      type="#3498db"
    >
      <span>
        Trigger
      </span>
    </div>
  </div>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots Popover Nested popover 1`] = `
.c1 {
  position: relative;
}

.c0 {
  display: inline-block;
}

<div
  className="c0"
>
  <div
    id="trigger"
    onClick={[Function]}
  >
    <button>
      hit me
    </button>
  </div>
  <div
    className="c1"
  />
</div>
`;
